--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.17.12",
     "@react-three/rapier": "^1.5.0",
     "@types/three": "^0.172.0",
+    "motion": "^11.18.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "three": "^0.172.0"
